--- a/package.json
+++ b/package.json
@@ -13,7 +13,15 @@
   "license": "MIT",
   "homepage": "https://github.com/NHSDigital/personal-demographics-service-api",
   "dependencies": {
-    "speccy": "^0.11.0"
+    "@hapi/hapi": "^20.1.4",
+    "@hapi/joi": "^17.1.1",
+    "boom": "^7.3.0",
+    "date-fns": "^2.22.1",
+    "fast-json-patch": "^3.0.0-1",
+    "inert": "^5.1.3",
+    "nhs-number-validator": "^1.1.1",
+    "speccy": "^0.11.0",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "apigeetool": "^0.14.2",
